--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "prop-types": "^15.6.1",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "^16.4.1",
+    "react-share": "^2.2.0",
     "sequelize": "^4.37.10",
     "serialize-javascript": "^1.5.0",
     "source-map-support": "^0.5.6",
