--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react": "^16.4.1",
     "react-autosuggest": "^9.3.4",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-share": "^2.2.0",
+    "redux": "^4.0.0",
     "sequelize": "^4.37.10",
     "serialize-javascript": "^1.5.0",
     "source-map-support": "^0.5.6",
